--- a/index.html
+++ b/index.html
@@ -90,15 +90,22 @@
           class="btn-link"
           onclick="location.href='https://bit.ly/3qH8hti'"
         >
-          <i class="fab fa-whatsapp"></i>
+        <i class="fab fa-whatsapp"></i>
           Cek 27 Motif Ready Stock Today
         </button>
         <button
-          class="btn-link shake"
+          class="btn-link"
           onclick="location.href='https://bit.ly/2Y5Cs1j'"
         >
           <i class="fab fa-instagram"></i>
           Cek Ready Stock Outfit Today
+        </button>
+        <button
+          class="btn-link shake"
+          onclick="location.href='https://bit.ly/3qNalRQ'"
+        >
+          <i class="tokoped"><img src="/SVG/tokopedia icon.png" alt="" ></i>
+          Order Free Ongkir Tokopedia<i class="tokoped"><img src="/SVG/tokopedia icon.png" alt="" ></i>
         </button>
         <button
           class="btn-link"
