--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           <i class="fab fa-instagram"></i>
           Cek Ready Stock Outfit Today
         </button>
-        <button
+        <!-- <button
           class="btn-link shake"
           onclick="location.href='https://bit.ly/3qNalRQ'"
         >
           <i class="tokoped"><img src="/SVG/tokopedia icon.png" alt="" ></i>
           Order Free Ongkir Tokopedia<i class="tokoped"><img src="/SVG/tokopedia icon.png" alt="" ></i>
-        </button>
+        </button> -->
         <button
           class="btn-link"
           onclick="location.href='https://bit.ly/3c7zykW'"
