--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
         />
         <h1>Cara Kontak Kami</h1>
       </header>
-      <main class="btn-tree">
+      <main class="btn-tree ">
         <button
-          class="btn-link"
+          class="btn-link shake"
           onclick="location.href='https://bit.ly/3qH8hti'"
         >
         <i class="fab fa-whatsapp"></i>
-          Cek 27 Motif Ready Stock Today
+          Cek 27 Scraf Motif dan Outfit Ready Stock Today
         </button>
-        <button
+        <!-- <button
           class="btn-link"
           onclick="location.href='https://bit.ly/2Y5Cs1j'"
         >
           <i class="fab fa-instagram"></i>
           Cek Ready Stock Outfit Today
-        </button>
+        </button> -->
         <!-- <button
           class="btn-link shake"
           onclick="location.href='https://bit.ly/3qNalRQ'"
@@ -116,7 +116,7 @@
         </button>
         <button
           class="btn-link"
-          onclick="location.href='https://bit.ly/2Ya8klq'"
+          onclick="location.href='https://bit.ly/2Znh0IQ'"
         >
           <i class="fab fa-whatsapp"></i>
           Komplain / Retur / Resi
